sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:5: error: not found: value beforeRED
  while (getColor(beforeRED)==RED){
                  ^DutchFlagAlgo:10: error: not found: value beforeBLUE
    beforeBLUE=beforeBlue+1
    ^