sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue =0
  var beforeRed =getSize()-1
  while (getColor(beforeRED)==RED){
    beforeRed=beforeRed-1
  }
  
  while (getColor(afterBlue)==BLUE){
    beforeBLUE=beforeBlue+1
  }
}